# PerfScope

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: PerfInline.cpp  PerfInline.h  PerfScope.cpp  PerfScope.h  main.cpp
src/Tools/: Capabilities.h
src/helper/: Pmu.h
